Se añadieron nuevas ventanas, se corrigió Login y se implementó la logistica del inicio de la App

--- a/ControlEscolar/ControlEscolar/ControlEscolar.csproj
+++ b/ControlEscolar/ControlEscolar/ControlEscolar.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MoreWindows\CreacMaterias.xaml.cs">
+      <DependentUpon>CreacMaterias.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MoreWindows\PaymentView.xaml.cs">
       <DependentUpon>PaymentView.xaml</DependentUpon>
     </Compile>
@@ -66,8 +69,14 @@
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="ViewModel\ViewModelCommand.cs" />
+    <Compile Include="View\ContactView.xaml.cs">
+      <DependentUpon>ContactView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\LoginView.xaml.cs">
       <DependentUpon>LoginView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\SignUpView.xaml.cs">
+      <DependentUpon>SignUpView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\UserRoleSelection.xaml.cs">
       <DependentUpon>UserRoleSelection.xaml</DependentUpon>
@@ -91,6 +100,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MoreWindows\CreacMaterias.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MoreWindows\PaymentView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -99,7 +112,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\ContactView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\LoginView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\SignUpView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -159,6 +180,23 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\nombre_institucion.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\LogoAplicacionSomosUAZmini.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\IconoAdministrador.png" />
+    <Resource Include="Images\IconoEstudiante.png" />
+    <Resource Include="Images\IconoMaestro.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\LogoAplicacionSomosUAZmini.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="LogoAplicacionSomosUAZmini.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\logoUAZblanco.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
