--- a/ControlEscolar/ControlEscolar/ControlEscolar.csproj
+++ b/ControlEscolar/ControlEscolar/ControlEscolar.csproj
@@ -69,6 +69,9 @@
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="ViewModel\ViewModelCommand.cs" />
+    <Compile Include="View\ContactViewMain.xaml.cs">
+      <DependentUpon>ContactViewMain.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\ContactView.xaml.cs">
       <DependentUpon>ContactView.xaml</DependentUpon>
     </Compile>
@@ -111,6 +114,10 @@
     <Page Include="MoreWindows\RegistrationView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ContactViewMain.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="View\ContactView.xaml">
       <SubType>Designer</SubType>
