--- a/ControlEscolar/ControlEscolar/ControlEscolar.csproj
+++ b/ControlEscolar/ControlEscolar/ControlEscolar.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MoreWindows\AdminRegister.xaml.cs">
+      <DependentUpon>AdminRegister.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MoreWindows\CreacMaterias.xaml.cs">
       <DependentUpon>CreacMaterias.xaml</DependentUpon>
     </Compile>
@@ -63,6 +66,12 @@
     </Compile>
     <Compile Include="MoreWindows\RegistrationView.xaml.cs">
       <DependentUpon>RegistrationView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MoreWindows\StudentRegister.xaml.cs">
+      <DependentUpon>StudentRegister.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="MoreWindows\TeacherRegister.xaml.cs">
+      <DependentUpon>TeacherRegister.xaml</DependentUpon>
     </Compile>
     <Compile Include="Repositories\RepositoryBase.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
@@ -75,11 +84,17 @@
     <Compile Include="View\ContactView.xaml.cs">
       <DependentUpon>ContactView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Institucion.xaml.cs">
+      <DependentUpon>Institucion.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\LoginView.xaml.cs">
       <DependentUpon>LoginView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\SignUpView.xaml.cs">
-      <DependentUpon>SignUpView.xaml</DependentUpon>
+    <Compile Include="View\PlanEstudiosView.xaml.cs">
+      <DependentUpon>PlanEstudiosView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\UbicacionView.xaml.cs">
+      <DependentUpon>UbicacionView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\UserRoleSelection.xaml.cs">
       <DependentUpon>UserRoleSelection.xaml</DependentUpon>
@@ -103,6 +118,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MoreWindows\AdminRegister.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MoreWindows\CreacMaterias.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -115,6 +134,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="MoreWindows\StudentRegister.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MoreWindows\TeacherRegister.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\ContactViewMain.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -123,13 +150,21 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\Institucion.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\LoginView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\SignUpView.xaml">
+    <Page Include="View\PlanEstudiosView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\UbicacionView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="View\UserRoleSelection.xaml">
       <SubType>Designer</SubType>
