Se anadieron imagenes y corrigieron errores

--- a/ControlEscolar/ControlEscolar/ControlEscolar.csproj
+++ b/ControlEscolar/ControlEscolar/ControlEscolar.csproj
@@ -240,5 +240,9 @@
   <ItemGroup>
     <Resource Include="Images\logoUAZblanco.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\plan-de-estudios.png" />
+    <Resource Include="Images\UbicacionIngenieriaSoftwareMaps.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
