--- a/ControlEscolar/ControlEscolar/ControlEscolar.csproj
+++ b/ControlEscolar/ControlEscolar/ControlEscolar.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helpers\RelayCommand .cs" />
     <Compile Include="MainWindowAdmin.xaml.cs">
       <DependentUpon>MainWindowAdmin.xaml</DependentUpon>
     </Compile>
